# Spinoza

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  canttouch.this  credential.json  presentation.json
backend/src/: error.rs  main.rs
backend/src/request/: did.rs  mod.rs  presentation.rs  storage.rs  vc.rs
backend/src/views/: mod.rs
backend/src/views/account/: create.rs  delete.rs  mod.rs  read.rs  update.rs
backend/src/views/credential/: create.rs  mod.rs  update.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs  router.rs  store.rs
frontend/src/api/: mod.rs
frontend/src/components/atoms/: bb_button.rs  bb_link.rs  bb_select.rs  bb_text_input.rs  mod.rs
frontend/src/components/molecules/: account_form.rs  error_message.rs  mod.rs
frontend/src/components/organisms/: navbar.rs
frontend/src/pages/: create_account.rs  home.rs
src-tauri/: tauri.conf.json
