[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
stylist = { version = "0.12.0", features = ["yew"]}
gloo = "0.8.0"
yewdux = "0.9.0"
serde = "1.0.152"
wasm-bindgen-futures = "0.4.33"
reqwasm = "0.5.0"
serde_json = "1.0.91"
wasm-bindgen = "0.2.0"
web-sys = "0.3.60"